fix: adjust Header and App Container spacing

--- a/src/components/global/Header/Header.module.scss
+++ b/src/components/global/Header/Header.module.scss
@@ -1,7 +1,4 @@
 .container {
-  position: fixed;
-  top: 0;
-  left: 0;
   height: 6.25rem;
   width: 100%;
   display: flex;
